# arcane

./: .gitignore  CMakeLists.txt  README.md  class_image.py  classify_camera.py  crop_label.py  detect_camera.py  detect_crop.py  detect_image.py  dice_cnn.py  hybrid_detection.py  train_model.py  update_labels.py  yoloit.py
helpers/: class_zeroer.py  create_val.py  delete_cropped.py  export.py  image_crop.py  image_rename.py  update_labels.py  yoloify.py
src/: main.cpp
trainers/: classify.py  detect.py
